--- a/libft/Makefile
+++ b/libft/Makefile
@@ -77,6 +77,7 @@ OK_COLOR =		\x1b[32;01m
 ERROR_COLOR =	\x1b[31;01m
 WARN_COLOR =	\x1b[33;01m
 SILENT_COLOR = \x1b[30;01m
+INFO_COLOR = \x1b[34;01m
 
 .PHONY: all re clean fclean
 
@@ -84,20 +85,20 @@ all: $(NAME)
 
 %.o:
 	@$(CC) -c $(subst .o,.c,$@) -I$(INCLUDES_FOLDER) $(FLAGS) -o $@
-	@printf "$(SILENT_COLOR)$(subst .o,.c,$@)..$(NO_COLOR)"
-	@echo "$(OK_COLOR)✓$(NO_COLOR)"
+	@printf "$(INFO_COLOR)$(subst .o,.c,$@).. $(NO_COLOR)"
+	@echo "$(OK_COLOR)✓ $(NO_COLOR)"
 
 $(NAME): $(OBJECTS)
-	@echo "$(SILENT_COLOR)Compiling LibFt..$(NO_COLOR)"
+	@echo "$(WARN_COLOR)Compiling LibFt..$(NO_COLOR)"
 	@ar rc $(NAME).a $(OBJECTS)
 	@echo "$(OK_COLOR)Successful. ✓$(NO_COLOR)"
 
 clean:
 	@rm -f $(OBJECTS)
-	@echo "$(SILENT_COLOR)$(NAME) : Cleaned Objects.$(NO_COLOR)"
+	@echo "$(OK_COLOR)$(NAME) : Cleaned Objects.$(NO_COLOR)"
 
 fclean: clean
 	@rm -f $(NAME).a
-	@echo "$(SILENT_COLOR)$(NAME) : Cleaned Library.$(NO_COLOR)"
+	@echo "$(OK_COLOR)$(NAME) : Cleaned Library.$(NO_COLOR)"
 
 re: fclean all
