--- a/testgnl/Makefile
+++ b/testgnl/Makefile
@@ -13,7 +13,7 @@ OBJECTS = $(SOURCES:.c=.o)
 OBJECTS := $(subst /,__,$(OBJECTS))
 OBJECTS := $(addprefix $(OBJECTS_FOLDER),$(OBJECTS))
 
-FLAGS = -Wall -Wextra -Werror -fPIC
+FLAGS = -Wall -Wextra -Werror -g3
 CC = clang
 
 NO_COLOR =		\033[38;5;0m
@@ -35,7 +35,7 @@ libft:
 	@make -C libft
 
 $(OBJECTS_FOLDER)%.o: %.c
-	@$(CC) $(FLAGS) -I$(INCLUDES_FOLDER) -c $< -o $@
+	@$(CC) -v $(FLAGS) -I$(INCLUDES_FOLDER) -c $< -o $@
 	@printf "$(INFO_COLOR)$<$(SILENT_COLOR)\t➤ $(INFO_COLOR)$@ $(NO_COLOR)"
 	@echo "$(OK_COLOR)✓ $(NO_COLOR)"
 
