--- a/GNL/libft/Makefile
+++ b/GNL/libft/Makefile
@@ -76,7 +76,7 @@ OBJECTS := $(subst /,__,$(OBJECTS))
 OBJECTS := $(addprefix $(OBJECTS_FOLDER),$(OBJECTS))
 SOURCES := $(addprefix $(SOURCES_FOLDER),$(SOURCES))
 
-FLAGS = -Wall -Wextra -Werror -fPIC
+FLAGS = -Wall -Wextra -Werror
 CC = clang
 
 NO_COLOR =		\033[38;5;15m
@@ -84,33 +84,28 @@ OK_COLOR =		\033[38;5;2m
 ERROR_COLOR =	\033[38;5;1m
 WARN_COLOR =	\033[38;5;3m
 SILENT_COLOR =	\033[38;5;245m
-INFO_COLOR =	\033[38;5;45m
+INFO_COLOR =	\033[38;5;140m
 
 .PHONY: all re clean fclean so
 
 all: $(NAME)
 
 $(NAME): $(OBJECTS)
+	@printf "$(NO_COLOR)All objects for $(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)where successfully created.\n"
 	@ar rc $(NAME) $(OBJECTS)
 	@ranlib $(NAME)
-	@echo "$(WARN_COLOR)$(NAME) successfully compiled. $(OK_COLOR)✓$(NO_COLOR)"
+	@printf "$(INFO_COLOR)$(NAME) $(NO_COLOR)successfully compiled. $(OK_COLOR)✓$(NO_COLOR)\n"
 
 $(OBJECTS_FOLDER)%.o: $(SOURCES_FOLDER)%.c
 	@$(CC) $(FLAGS) -I$(INCLUDES_FOLDER) -c $< -o $@
-	@printf "$(INFO_COLOR)$<$(SILENT_COLOR)\t➤ $(INFO_COLOR)$@ $(NO_COLOR)"
-	@echo "$(OK_COLOR)✓ $(NO_COLOR)"
-
-so: $(OBJECTS)
-	@$(CC) $(FLAGS) -shared -o $(subst .a,.so,$(NAME)) $(OBJECTS)
-	@echo "$(WARN_COLOR)$(subst .a,.so,$(NAME)) successfully compiled. $(OK_COLOR)✓$(NO_COLOR)"
+	@printf "$(NO_COLOR)Creating $(INFO_COLOR)$@ $(OK_COLOR)✓ $(NO_COLOR)\r"
 
 clean:
 	@rm -f $(OBJECTS)
-	@echo "$(WARN_COLOR)$(PROJECT_NAME) $(SILENT_COLOR): $(WARN_COLOR)Clean $(OK_COLOR)✓.$(NO_COLOR)"
+	@printf "$(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)Removed all objects$(NO_COLOR).\n"
 
 fclean: clean
 	@rm -f $(NAME)
-	@rm -f $(subst .a,.so,$(NAME))
-	@echo "$(WARN_COLOR)$(PROJECT_NAME) $(SILENT_COLOR): $(WARN_COLOR)Fclean $(OK_COLOR)✓.$(NO_COLOR)"
+	@printf "$(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)Removed $(INFO_COLOR)$(NAME)$(NO_COLOR).\n"
 
 re: fclean all
