--- a/GNL/Makefile
+++ b/GNL/Makefile
@@ -12,8 +12,9 @@ SOURCES = \
 OBJECTS = $(SOURCES:.c=.o)
 OBJECTS := $(subst /,__,$(OBJECTS))
 OBJECTS := $(addprefix $(OBJECTS_FOLDER),$(OBJECTS))
+SOURCES := $(addprefix $(SOURCES_FOLDER),$(SOURCES))
 
-FLAGS = -Wall -Wextra -Werror -g3
+FLAGS = -Wall -Wextra -Werror
 CC = clang
 
 NO_COLOR =		\033[38;5;15m
@@ -23,19 +24,14 @@ WARN_COLOR =	\033[38;5;3m
 SILENT_COLOR =	\033[38;5;245m
 INFO_COLOR =	\033[38;5;140m
 
-.PHONY: all re clean fclean libft
+.PHONY: all re clean fclean so
 
 all: $(NAME)
 
-$(NAME): libft $(OBJECTS)
+$(NAME): $(OBJECTS)
 	@printf "$(NO_COLOR)All objects for $(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)where successfully created.\n"
 	@$(CC) $(FLAGS) -I$(INCLUDES_FOLDER) -o $(NAME) $(OBJECTS) -L libft/ -lft
 	@printf "$(INFO_COLOR)$(NAME) $(NO_COLOR)successfully compiled. $(OK_COLOR)✓$(NO_COLOR)\n"
-
-libft:
-	@printf "\n$(INFO_COLOR)======= $(NO_COLOR)LIBFT $(INFO_COLOR)=======\n"
-	@make -C libft re
-	@printf "$(INFO_COLOR)=====================\n\n"
 
 $(OBJECTS_FOLDER)%.o: %.c
 	@$(CC) $(FLAGS) -I$(INCLUDES_FOLDER) -c $< -o $@
