--- a/fillit/Makefile
+++ b/fillit/Makefile
@@ -52,7 +52,7 @@ $(OBJECTS_FOLDER)%.o: $(SOURCES_FOLDER)%.c
 
 libft:
 	@printf "\n$(NO_COLOR)-------- $(INFO_COLOR)Libft $(NO_COLOR)--------\n"
-	@make -C libft re
+	@make -C libft
 	@printf "$(NO_COLOR)-----------------------\n\n"
 
 libfclean:
