--- a/fillit/Makefile
+++ b/fillit/Makefile
@@ -4,9 +4,8 @@ PROJECT_NAME = Fillit
 SOURCES_FOLDER = ./
 INCLUDES_FOLDER = ./
 OBJECTS_FOLDER = ./
-TESTFILES_FOLDER = files/
-ULIMIT_FOLDER = ulimit/
-OUTPUTS_FOLDER = outputs/
+
+LIBS = libft
 
 SOURCES = \
 	fillit.c \
@@ -19,13 +18,7 @@ SOURCES = \
 
 MAIN = main.c
 
-DIRS = \
-	$(TESTFILES_FOLDER) \
-
 OBJECTS = $(SOURCES:.c=.o)
-OBJECTS := $(subst /,__,$(OBJECTS))
-OBJECTS := $(addprefix $(OBJECTS_FOLDER),$(OBJECTS))
-SOURCES := $(addprefix $(SOURCES_FOLDER),$(SOURCES))
 
 FLAGS = -Wall -Wextra -Werror -g3
 CC = clang
@@ -37,14 +30,16 @@ WARN_COLOR =	\033[38;5;3m
 SILENT_COLOR =	\033[38;5;245m
 INFO_COLOR =	\033[38;5;140m
 
-.PHONY: all re clean fclean libft dirs aclean libfclean ulclean
+.PHONY: all re clean fclean libft force
 
-all: dirs $(NAME)
+all: $(NAME)
 
-dirs:
-	@mkdir -p $(DIRS)
+$(LIBS):
+	@printf "\n$(NO_COLOR)-------- $(INFO_COLOR)Libft $(NO_COLOR)--------\n"
+	@make -C $(@)
+	@printf "$(NO_COLOR)-----------------------\n\n"
 
-$(NAME): libft $(OBJECTS)
+$(NAME): $(OBJECTS) $(LIBS)
 	@printf "$(NO_COLOR)All objects for $(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)where successfully created.\n"
 	@$(CC) $(FLAGS) -I$(INCLUDES_FOLDER) -o $(NAME) $(OBJECTS) -L libft/ -lft
 	@printf "$(INFO_COLOR)$(NAME) $(NO_COLOR)successfully compiled. $(OK_COLOR)✓$(NO_COLOR)\n"
@@ -58,31 +53,14 @@ $(OBJECTS_FOLDER)%.o: $(SOURCES_FOLDER)%.c
 	@$(CC) $(FLAGS) -I$(INCLUDES_FOLDER) -c $< -o $@
 	@printf "$(NO_COLOR)Creating $(INFO_COLOR)%-30s $(OK_COLOR)✓$(NO_COLOR)\r" "$@"
 
-libft:
-	@printf "\n$(NO_COLOR)-------- $(INFO_COLOR)Libft $(NO_COLOR)--------\n"
-	@make -C libft re
-	@printf "$(NO_COLOR)-----------------------\n\n"
-
-libfclean:
-	@printf "\n$(NO_COLOR)-------- $(INFO_COLOR)Libft $(NO_COLOR)--------\n"
-	@make -C libft fclean
-	@printf "$(NO_COLOR)-----------------------\n\n"
-
 clean:
 	@rm -f $(OBJECTS)
+	@make -C $(LIBS) clean
 	@printf "$(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)Removed all objects$(NO_COLOR).\n"
 
 fclean: clean
 	@rm -f $(NAME)
+	@make -C $(LIBS) fclean
 	@printf "$(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)Removed $(INFO_COLOR)$(NAME)$(NO_COLOR).\n"
-
-aclean: libfclean fclean
-	@rm -rf $(DIRS) $(MAIN) gnl.dSYM
-	@printf "$(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)Removed $(INFO_COLOR)all files$(NO_COLOR).\n"
-	@rm Makefile
-
-ulclean:
-	@rm -f $(ULIMIT_FOLDER)/*
-	@printf "$(INFO_COLOR)$(PROJECT_NAME) $(NO_COLOR)Removed $(INFO_COLOR)all ulimit files$(NO_COLOR).\n"
 
 re: fclean all
