--- a/roger-skyline1/test.yml
+++ b/roger-skyline1/test.yml
@@ -1,6 +1,5 @@
 packages:
   deploy: true
-  customrepo:
-    - "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main"
-  custompackages:
-    - "oracle-java8-installer"
+  # Split using `|` eg: `customrepo: "Repo1 | Repo2"` or eg: `"custompackages: package1 | package2"`
+  customrepo: "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main"
+  custompackages: "oracle-java8-installer"
