3 files changed, 8 insertions(+), 14 deletions(-)

--- a/roger-skyline1/deployment-files/deploy/settings.yml
+++ b/roger-skyline1/deployment-files/deploy/settings.yml
@@ -12,10 +12,10 @@ ssh:
   user: malallai
 
 firewalls:
-  deploy: true
+  deploy: false
 
 dos:
-  deploy: true
+  deploy: false
 
 scripts:
   crondiff:
