--- a/ft_ls/Makefile
+++ b/ft_ls/Makefile
@@ -17,7 +17,7 @@ SOURCES = \
 OBJECTS = $(SOURCES:.c=.o)
 
 FSANITIZE = -fsanitize=address
-FLAGS =
+FLAGS = -g
 CC = clang
 
 NO_COLOR =		\033[38;5;15m
