6 files changed, 44 insertions(+), 27 deletions(-)

--- a/roger-skyline1/deployment-files/deploy/settings.yml
+++ b/roger-skyline1/deployment-files/deploy/settings.yml
@@ -3,7 +3,7 @@ packages:
   usecustom: false
   # Split using `|` eg: `customrepo: "Repo1 | Repo2"` or eg: `"custompackages: package1 | package2"`
   customrepo: ""
-  custompackages: "ufw"
+  custompackages: ""
 
 ssh:
   deploy: true
