--- a/ft_ls/Makefile
+++ b/ft_ls/Makefile
@@ -24,6 +24,7 @@ SOURCES = \
 	printer.c \
 	reader.c \
 	sort.c \
+	swap.c \
 	time.c \
 	utils.c \
 
@@ -33,8 +34,8 @@ OBJECTS := $(addprefix $(OBJECTS_FOLDER),$(OBJECTS))
 SOURCES := $(addprefix $(SOURCES_FOLDER),$(SOURCES))
 
 FSANITIZE = -fsanitize=address
-#FLAGS = -Wall -Wextra -Werror $(FSANITIZE)
-FLAGS = -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror $(FSANITIZE)
+#FLAGS = -Wall -Wextra -Werror
 CC = clang
 
 NO_COLOR =		\033[38;5;15m
