21 files changed, 227 insertions(+), 83 deletions(-)

--- a/ft_ls/Makefile
+++ b/ft_ls/Makefile
@@ -22,6 +22,7 @@ SOURCES = \
 	print_put.c \
 	printer.c \
 	reader.c \
+	recurs.c \
 	sort.c \
 	stat_ftls.c \
 	swap.c \
@@ -34,8 +35,8 @@ OBJECTS := $(addprefix $(OBJECTS_FOLDER),$(OBJECTS))
 SOURCES := $(addprefix $(SOURCES_FOLDER),$(SOURCES))
 
 FSANITIZE = -fsanitize=address
-FLAGS = -Wall -Wextra -Werror $(FSANITIZE)
-#FLAGS = -Wall -Wextra -Werror
+#FLAGS = -Wall -Wextra -Werror $(FSANITIZE)
+FLAGS = -Wall -Wextra -Werror
 CC = clang
 
 NO_COLOR =		\033[38;5;15m
